2007-03-01  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/ipc/msg/msg.c: cast macros to long, in msg_not_sent-received,
	  to be consistent with 64 bits address casting,

2007-02-28  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* addons/drivers/serial/rtai_serial.h: revised to be usable with 64 bits
	  archs also.

2007-02-26  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/asm-i386/rtai_lxrt.h: rewrote Linux syscall server 
	  creation and support function to allow both sync and async serving;
	  added a function for changing sync_async mode and callback function.
	* base/include/asm-i386/rtai_sched: changed Linux syscall server type 
	  in task struct to support both sync and async serving.
	* base/sched/sys.c: rewrote Linux syscall server creation to support 
	  both sync and async serving.
	* base/sched/api.c: rewrote Linux syscall server calling to support 
	  both sync and async serving; added a function for changing 
	  sync_async mode and callback.
	* base/sched/sched.c: modified assignement of Linux syscall server 
	  in task structure and call table to support both sync and async 
	  serving.

2007-02-25  Roberto Bucher <roberto.bucher@supsi.ch>

	*/rtai-lab/scilab/macros/RTAI/:RTAICodegen_.sci: Some changes to
	run under Windows

2007-02-14  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/asm-i386/rtai_lxrt.h: task context switching 
	  compatibility with new fpu support in linux > 2.6.19.

2007-02-10  Paul Corner <paul_c@tuxcnc.org>

	* base/ipc/fifos/fifos.c: fix udev related ifdefs.

2007-02-09  Roberto Bucher <roberto.bucher@supsi.ch>

	* /rtai-lab/scilab/macros/RTAI/SetTarget_.sci,
	*/rtai-lab/scilab/macros/RTAI/:RTAICodegen_.sci: Corrected bug with 
	non existent TARGET_DIR (again!).
	*/rtai-lab/scilab/macros/RTAI/:RTAICodegen_.sci: Eliminated the string
	substitution '-' -> '_' for the generation folder.


2007-02-09  Paolo Mantegazza <mantegazza@aero.polimi.it>
